Closed Bug 838896 Opened 12 years ago Closed 6 years ago

Crash Reporter doesn't all pasting of clipboard data

Categories

(Toolkit :: Crash Reporting, defect, P2)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox72 --- fixed

People

(Reporter: steve, Assigned: gsvelto)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:18.0) Gecko/20100101 Firefox/18.0 Build ID: 20130201185534 Steps to reproduce: Thunderbird crashed and left a bunch of messages on the console. I cut and pasted it into a file, but nothing gets copied into the crash reporter when pasting into the input area. % /usr/lib/thunderbird/crashreporter --version GNOME crashreporter 1.0 Actual results: nothing gets pasted into the crash reporter, whether I use ctrl-v or middle mouse click. I can paste into anything else, so the clipboard has the data. Expected results: the contents of the clipboard should have been copied into the type-in area for the crash reporter. Instead, nothing appears, and I'm not about to attempt to re-type all those messages!
OS: All → Linux
Hardware: All → x86_64
Component: General → Breakpad Integration

I was going through old reports to triage them and this isn't fixed yet! Flagging it as valid and it needs to be fixed soon, this is a pretty big oversight on our part.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P2

This is a super-silly issue. We have a limitation on what you can paste into the crash reporter client. It's 500 chars which are far too low if one wants to add a piece of log or something along the lines. Let's lift it.

Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
Pushed by gsvelto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2412ec5c8ea7 Increase the crash reporter client comment size limit to 10000 characters; r=froydnj
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: