Bug 838896 - Increase the crash reporter client comment size limit to 10000 characters; r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D53154